logs/fedstream/client5_round100_initdata700/cifar100_resnet_feddyn/launcher_basic/d1_c10_e20.log
Traceback (most recent call last):
  File "/home/kemove/lt/FedAlgorithm/alg/FedStream.py", line 14, in <module>
    from FedAvg import Server as FedAvg_Server
  File "/home/kemove/lt/FedAlgorithm/alg/FedAvg.py", line 14, in <module>
    from Clients import Client_Group, run_client_avg
  File "/home/kemove/lt/FedAlgorithm/alg/Clients.py", line 64
    finally:
    ^^^^^^^
SyntaxError: invalid syntax
